--- a/college/project/templates/application_form.html
+++ b/college/project/templates/application_form.html
@@ -1,3 +1,11 @@
+{% extends 'basic.html' %}
+
+{% block title %} Application Form {% endblock %}
+{% block application_form %} active {% endblock %}
+{% block css %}
+{% endblock %}
+{% block body %}
+
 {% if hide.exists %}
 <div class="container mt-4">
     <div class="row">
@@ -225,3 +233,4 @@
     </form>
 </div>
 {% endif %}
+{% endblock %}
