--- a/college/project/templates/login.html
+++ b/college/project/templates/login.html
@@ -1,3 +1,11 @@
+{% extends 'basic.html' %}
+
+{% block title %} Login Page {% endblock %}
+{% block login %} active {% endblock %}
+
+{% block css %}
+{% endblock %}
+{% block body %}
 <form action="/login/" method="POST"> {% csrf_token %}
     <div class="container mt-5">
     <div class="mb-3">
@@ -12,3 +20,4 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </div>
   </form>
+{% endblock %}
